Fixed nav overlaping header

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -73,17 +73,21 @@ nav {
 
 @media only screen and (min-width:180px) {
 
-    /* header   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1); */
-
     nav {
         background-color: transparent;
         position: absolute;
         width: 100%;
         height: 100%;
-        z-index: 3;
-        /* margin-left: 10%;
-        margin-right: 10%; */
-        /* padding: 20px 0; */
+    }
+
+    nav .logo{
+        position: relative;
+        z-index: 1;
+    }
+
+    nav .menu-icon{
+        position: relative;
+        z-index: 2;
     }
 
     nav ul {
@@ -106,7 +110,6 @@ nav {
     }
 
     nav .logo {
-        /* margin-left: 10%; */
         display: block;
         float: left;
         padding: 2px 0 2px 10%;
@@ -126,7 +129,6 @@ nav {
     nav .menu-icon {
         cursor: pointer;
         display: inline-block;
-        /* float: right; */
         padding: 28px 20px;
         position: relative;
         user-select: none;
@@ -169,15 +171,11 @@ nav {
         display: none;
     }
 
-    nav .menu-btn:checked~.menu {
+    nav .menu-btn:checked ~ .menu {
+        position: relative;
         height: 90%;
         max-height: 100%;
-    }
-
-    nav .menu-btn:checked~body{
-        margin: 0; 
-        height: 100%; 
-        overflow-y: hidden;
+        z-index: 1;
     }
 
     nav .menu-btn:checked~.logo {
@@ -204,7 +202,7 @@ nav {
         top: 0;
     }
 
-    nav .menu-btn:checked~ul.social-icons {
+    nav .menu-btn:checked ~ ul.social-icons {
         display: flex;
         flex-flow: row nowrap;
         position: absolute;
@@ -212,6 +210,7 @@ nav {
         justify-content: center;
         width: 100%;
         transition: .3s ease-in-out;
+        z-index: 2;
     }
 
     nav .menu-icon {
